# worterbuch

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.arm  Dockerfile.cli  LICENSE  PROXY_MODE.md  README.md  TODO.md  TODO.txt  build-arm.sh  build-musl.sh  check.sh  config.yaml  deploy.sh  docker-compose-arm.yml  docker-compose.yml  example.env  install.sh  message-layouts.txt  publish.sh  release-check.sh  release.sh  run-alice.sh  run-bob.sh  run-carl.sh  run-dave.sh  run-emily.sh  run-follower.sh  run-leader.sh  specification.md  tcp-protocol.md  test.sh  vector.toml
libworterbuch/: Cargo.toml  Makefile.toml  README.md
libworterbuch/examples/: min-get.rs  min-pget.rs
libworterbuch/src/: config.rs  error.rs  lib.rs
libworterbuch/src/client/: config.rs  gql.rs  mod.rs  tcp.rs  ws.rs
libworterbuch/src/codec/: blocking.rs  mod.rs  nonblocking.rs
worterbuch/: Cargo.toml  Dockerfile  Makefile.toml  asyncapi.yaml  bash-completion.sh  docker-compose.yml  subscribe-benchmark.sh  test.rest  watch.sh
worterbuch-cli/: .gitignore  Cargo.toml  Makefile.toml  README.md
worterbuch-cli/examples/: last-will-test.rs
worterbuch-cli/src/: commands.txt  gql.rs  lib.rs  main.rs  tcp.rs  utils.rs  ws.rs
worterbuch-client/: Cargo.toml  README.md
worterbuch-client/examples/: acquire_lock.rs  lock.rs  psubscribe.rs  update.rs
worterbuch-client/src/: buffer.rs  config.rs  error.rs  lib.rs  local.rs  tcp.rs  unix.rs  ws.rs
worterbuch-cluster-orchestrator/: .gitignore  Cargo.toml  README.md  check.sh  config.yaml  docker-compose.yaml  release.sh  run-alice.sh  run-bob.sh  run-carl.sh  run-dave.sh  run-emily.sh
worterbuch-cluster-orchestrator/.github/workflows/: test.yml
worterbuch-cluster-orchestrator/chart/: Chart.yaml  values.yaml
worterbuch-cluster-orchestrator/chart/templates/: deployment.tpl  serviceaccount.tpl
worterbuch-cluster-orchestrator/docker/: Dockerfile
worterbuch-cluster-orchestrator/kubernetes/chart/: values.yaml
worterbuch-cluster-orchestrator/kubernetes/chart/templates/: deployment.tpl  pvc.tpl  service.tpl
worterbuch-cluster-orchestrator/src/: config.rs  election.rs  error.rs  follower.rs  leader.rs  lib.rs  main.rs  process_manager.rs  socket.rs  stats.rs  telemetry.rs  utils.rs
worterbuch-cluster-orchestrator/wireshark/: worterbuch-cluster-orchestrator.lua
worterbuch-codec/: Cargo.toml  README.md
worterbuch-codec/src/: blocking.rs  error.rs  lib.rs  nonblocking.rs  server.rs
worterbuch-codec/src/decode/: client.rs  server.rs
worterbuch-codec/src/encode/: client.rs  mod.rs  server.rs
worterbuch-codec/src/types/: client.rs  mod.rs  server.rs
worterbuch-common/: Cargo.toml  Makefile.toml  README.md  asyncapi.yaml
worterbuch-common/schema/: client.schema.yaml  server.schema.yaml
worterbuch-common/schema/test/client/invalid/: delete-no-key.json  get-no-transactionId.json  handshakeRequest-empty-protocol-versions.json  handshakeRequest-no-graveGoods.json  handshakeRequest-no-lastWill.json  ls-no-parent.json  ls-no-transactionId.json  pSubscribe-no-unique.json
worterbuch-common/schema/test/client/valid/: delete.json  get.json  handshakeRequest-empty-graveGoods.json  handshakeRequest-empty-lastWill-empty-graveGoods.json  handshakeRequest-empty-lastWill.json  handshakeRequest.json  ls-root.json  ls.json  pDelete.json  pGet.json  pSubscribe.json  publish.json  set.json  subscribe.json  transform.json  unsubscribe.json
worterbuch-common/schema/test/server/invalid/: lsState-no-children.json  multiple-messages.json  pState-deleted-empty.json  pState-keyValuePairs-empty.json  (+5 more)
worterbuch-common/src/: benchmark.rs  client.rs  error.rs  lib.rs  profiling.rs  redb.rs  server.rs  tcp.rs
worterbuch-js/: Cargo.toml  Makefile.toml
worterbuch-js/examples/: package-lock.json  package.json
worterbuch-js/examples/src/: index.js
worterbuch-js/src/: lib.rs
worterbuch-speedtest/: Cargo.toml  test.rest
worterbuch-speedtest/src/: latency.rs  main.rs  throughput.rs  web_ui.rs
worterbuch-speedtest/web-ui/: package-lock.json  package.json  vite.config.js
worterbuch-speedtest/web-ui/src/: App.jsx  LatencyTest.jsx  TabBar.jsx  Theme.jsx  ThroughputTest.jsx  main.jsx  sse.js  utils.js
worterbuch/benches/: .gitignore  benchmark.rs  dump.json
worterbuch/chart/: Chart.yaml
worterbuch/chart/templates/: NOTES.txt  service.tpl  serviceaccount.tpl
worterbuch/docker/: Dockerfile  docker-compose.yml
worterbuch/flamegraph/: .gitignore  flamegraph.sh
worterbuch/src/: auth.rs  config.rs  error.rs  leader_follower.rs  lib.rs  license.rs  logging.rs  main.rs  mem_tools.rs  persistence.rs  profiling.rs  repl.rs  stats.rs  store.rs  subscribers.rs  telemetry.rs  utils.rs  warp.rs  worterbuch.rs
worterbuch/src/cluster/: follower.rs  leader.rs  mod.rs
worterbuch/src/codec/: blocking.rs
worterbuch/src/leader_follower/: follower.rs  leader.rs  mod.rs
worterbuch/src/persistence/: error.rs  mod.rs  v1.rs  v2.rs  v3.rs
worterbuch/src/persistence/json/: mod.rs  v1.rs  v2.rs  v3.rs
worterbuch/src/persistence/redb/: mod.rs
worterbuch/src/persistence/sqlite/: mod.rs  trie.rs
worterbuch/src/persistence/turso/: mod.rs  trie.rs
worterbuch/src/server/: async_common.rs  axum.rs  common.rs  gql_warp.rs  graphql.rs  http.rs  mod.rs  poem.rs  socket_io.rs  tcp.rs  unix.rs  web.rs  ws.rs
worterbuch/src/server/axum/: auth.rs  mod.rs  websocket.rs
worterbuch/src/server/common/: mod.rs  protocol.rs  v1_0.rs
worterbuch/src/server/poem/: auth.rs  mod.rs  websocket.rs
worterbuch/src/server/warp/: common.rs  mod.rs  ws.rs
worterbuch/src/server/web/: graphql.rs  http.rs  mod.rs  ws.rs
worterbuch/src/store/: error.rs  lock.rs  mod.rs
worterbuch/src/store/backend/: mod.rs
worterbuch/test/: ec256-private.pem  ec256-public.pem  ed25519-private.pem  ed25519-public.pem  key.asc  license  test.rest
worterbuch/tests/: license  persistence_json.rs  persistence_redb.rs  persistence_sqlite.rs  test_common.rs
worterbuch/tests/json/: server_setup_json.json  server_setup_redb.json  server_setup_sqlite.json  test_grave_goods_last_will.json
(+103 files in other folders)
