[workspace]
members = [
    "worterbuch-common",
    "worterbuch-client",
    "worterbuch",
    "worterbuch-cluster-orchestrator",
    "worterbuch-cli",
    "worterbuch-speedtest",
]
resolver = "2"

[patch.crates-io]
worterbuch-common = { path = "./worterbuch-common" }
worterbuch-client = { path = "./worterbuch-client" }

[profile.release]
lto = "fat"
codegen-units = 1
# panic = "abort"
# strip = true
# debug = 0
opt-level = 3
