[package]
name = "libworterbuch"
version = "0.4.0"
edition = "2021"
authors = ["Michael Bachmann <mbachmann@bbmsoft.net>"]
description = "Client library for Wörterbuch."
repository = "https://github.com/babymotte/worterbuch"
readme = "README.md"
license = "MIT"
keywords = ["message", "broker", "data", "base", "pubsub"]
categories = ["database"]

[features]
default = []
tcp = ["tokio/net"]
ws = ["web"]
graphql = ["web", "futures-channel", "url"]
web = ["futures-util", "tokio-tungstenite"]

[dependencies]
log = "0.4.17"
tokio = { version = "1.19.2", features = ["sync", "rt", "io-util"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81" }

futures-util = { version = "0.3.21", default-features = false, features = [
    "sink",
    "std",
], optional = true }
futures-channel = { version = "0.3.21", optional = true }
tokio-tungstenite = { version = "0.17.1", optional = true }
url = { version = "2.2.2", optional = true }

[dev-dependencies]
tokio-test = "0.4.2"
