[package]
name = "libworterbuch"
version = "0.12.1"
edition = "2021"
authors = ["Michael Bachmann <mbachmann@bbmsoft.net>"]
description = "Client library for Wörterbuch."
repository = "https://github.com/babymotte/worterbuch"
readme = "README.md"
license = "MIT"
keywords = ["message", "broker", "data", "base", "pubsub"]
categories = ["database"]

[features]
default = []
tcp = ["tokio/net"]
ws = ["web"]
graphql = ["web", "futures-channel", "url"]
web = ["futures-util", "tokio-tungstenite"]
blocking = []

[dependencies]
log = "0.4.17"
tokio = { version = "1.20.1", features = ["sync", "rt", "io-util"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
async-stream = "0.3.3"
futures-core = "0.3.23"

futures-util = { version = "0.3.21", default-features = false, features = [
    "sink",
    "std",
], optional = true }
futures-channel = { version = "0.3.21", optional = true }
tokio-tungstenite = { version = "0.17.2", optional = true }
url = { version = "2.2.2", optional = true }

[dev-dependencies]
tokio-test = "0.4.2"
