[package]
name = "worterbuch-cli"
version = "0.45.3"
edition = "2021"
authors = ["Michael Bachmann <mbachmann@bbmsoft.net>"]
description = "Command line clients for Wörterbuch."
repository = "https://github.com/babymotte/worterbuch"
readme = "README.md"
license = "AGPL-3.0-or-later"
keywords = ["message", "broker", "data", "base", "pubsub"]
categories = ["database", "command-line-utilities"]

[dependencies]
worterbuch-client = "0.45.0"
tokio = { version = "1.26.0", features = ["rt", "macros", "io-std", "time"] }
tokio-graceful-shutdown = "0.13.0"
dotenv = "0.15.0"
anyhow = "1.0.70"
serde = "1.0.157"
serde_json = "1.0.94"
clap = { version = "4.1.11", features = ["derive"] }
log = "0.4.17"
tracing-subscriber = "0.3.18"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
enum_glob_use = "deny"
# pedantic = "deny"
# nursery = "deny"
unwrap_used = "deny"
