[package]
name = "worterbuch-cli"
version = "1.4.0-rc.10"
edition = "2024"
authors = ["Michael Bachmann <mbachmann@bbmsoft.net>"]
description = "Command line clients for Wörterbuch."
repository = "https://github.com/babymotte/worterbuch"
readme = "README.md"
license = "AGPL-3.0-or-later"
keywords = ["message", "broker", "data", "base", "pubsub"]
categories = ["database", "command-line-utilities"]

[dependencies]
worterbuch-client = { version = "1.4.0-rc.10", path = "../worterbuch-client" }
tokio = { version = "1.44.2", features = ["rt", "macros", "io-std", "time"] }
tokio-graceful-shutdown = { version = "0.19.0", features = ["tracing"] }
dotenvy = "0.15.7"
serde = "1.0.157"
serde_json = "1.0.94"
clap = { version = "4.1.11", features = ["derive"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
miette = { version = "7.5.0", features = ["fancy"] }
tracing = "0.1.41"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
enum_glob_use = "deny"
# pedantic = "deny"
# nursery = "deny"
unwrap_used = "deny"
