[package]
name = "worterbuch-cli"
version = "1.5.0-rc.8"
edition = "2024"
authors = ["Michael Bachmann <mbachmann@bbmsoft.net>"]
description = "Command line clients for Wörterbuch."
repository = "https://github.com/babymotte/worterbuch"
readme = "README.md"
license = "AGPL-3.0-or-later"
keywords = ["message", "broker", "data", "base", "pubsub"]
categories = ["database", "command-line-utilities"]

[dependencies]
clap = { workspace = true, features = ["derive"] }
dotenvy = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "io-std", "time"] }
tosub = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
worterbuch-client = { workspace = true }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
enum_glob_use = "deny"
# pedantic = "deny"
# nursery = "deny"
unwrap_used = "deny"
