[package]
name = "worterbuch-client"
version = "1.0.0"
edition = "2021"
authors = ["Michael Bachmann <mbachmann@bbmsoft.net>"]
description = "Client library for Wörterbuch."
repository = "https://github.com/babymotte/worterbuch"
readme = "README.md"
license = "AGPL-3.0-or-later"
keywords = ["message", "broker", "data", "base", "pubsub"]
categories = ["database"]

[dependencies]
worterbuch-common = "1.0.0"
log = "0.4.17"
tokio = { version = "1.26.0", features = ["sync", "rt", "macros", "time"] }
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
async-stream = "0.3.4"
futures-core = "0.3.27"
futures-util = { version = "0.3.27", default-features = false }
tokio-tungstenite = "0.26.2"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
enum_glob_use = "deny"
# pedantic = "deny"
# nursery = "deny"
unwrap_used = "deny"
