[package]
name = "worterbuch-client"
version = "1.4.0"
edition = "2024"
authors = ["Michael Bachmann <mbachmann@bbmsoft.net>"]
description = "Client library for Wörterbuch."
repository = "https://github.com/babymotte/worterbuch"
readme = "README.md"
license = "AGPL-3.0-or-later"
keywords = ["message", "broker", "data", "base", "pubsub"]
categories = ["database"]

[features]
default = ["tcp", "unix", "ws"]
tcp = ["tokio/net"]
ws = ["worterbuch-common/ws", "tokio/rt", "tokio-tungstenite", "async-stream"]
unix = ["tokio/net"]
wasm = [
    "tokio",
    "worterbuch-common/wasm",
    "tokio-tungstenite-wasm",
    "getrandom/wasm_js",
]

[dependencies]
tokio-tungstenite-wasm = { version = "0.7.0", optional = true }
worterbuch-common = { version = "1.4.0", path = "../worterbuch-common" }
tokio = { version = "1.44.2", optional = true, features = [
    "macros",
    "rt",
    "sync",
] }
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
async-stream = { version = "0.3.4", optional = true }
futures-core = { version = "0.3.27", optional = true }
futures-util = { version = "0.3.27", default-features = false }
tokio-tungstenite = { version = "0.28.0", optional = true }
tracing = "0.1.41"
getrandom = { version = "^0.3", optional = true, features = ["wasm_js"] }
mio = { version = "1.0.3", default-features = false }

[dev-dependencies]
miette = { version = "7.5.0", features = ["fancy"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
enum_glob_use = "deny"
# pedantic = "deny"
# nursery = "deny"
unwrap_used = "deny"
