[package]
name = "worterbuch-client"
version = "1.5.0-rc.7"
edition = "2024"
authors = ["Michael Bachmann <mbachmann@bbmsoft.net>"]
description = "Client library for Wörterbuch."
repository = "https://github.com/babymotte/worterbuch"
readme = "README.md"
license = "AGPL-3.0-or-later"
keywords = ["message", "broker", "data", "base", "pubsub"]
categories = ["database"]

[features]
default = ["tcp", "unix", "ws"]
tcp = ["tokio/net"]
ws = ["worterbuch-common/ws", "tokio/rt", "tokio-tungstenite", "async-stream"]
unix = ["tokio/net"]
wasm = [
    "tokio",
    "worterbuch-common/wasm",
    "tokio-tungstenite-wasm",
    "getrandom/wasm_js",
]

[dependencies]
async-stream = { workspace = true, optional = true }
futures-core = { workspace = true, optional = true }
futures-util = { workspace = true }
getrandom = { workspace = true, optional = true, features = ["wasm_js"] }
hashbrown = { workspace = true }
mio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, optional = true, features = [
    "macros",
    "rt",
    "sync",
] }
tokio-tungstenite = { workspace = true, optional = true }
tokio-tungstenite-wasm = { workspace = true, optional = true }
tracing = { workspace = true }
worterbuch-common = { workspace = true }

[dev-dependencies]
miette = { workspace = true, features = ["fancy"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
enum_glob_use = "deny"
# pedantic = "deny"
# nursery = "deny"
unwrap_used = "deny"
