[package]
name = "worterbuch-cluster-orchestrator"
version = "1.5.0-rc.8"
edition = "2024"
authors = ["Michael Bachmann <mbachmann@bbmsoft.net>"]
description = "An orchestrator for running Wörterbuch as a distributed cluster."
repository = "https://github.com/babymotte/worterbuch-cluster-orchestrator"
readme = "README.md"
license = "AGPL-3.0-or-later"
keywords = ["message", "broker", "data", "base", "pubsub"]
categories = ["database-implementations"]

[features]
jemalloc = ["worterbuch-common/jemalloc"]
default = ["jemalloc"]

[dependencies]
axum = { workspace = true, features = ["http2"] }
clap = { workspace = true, features = ["derive", "env"] }
dotenvy = { workspace = true }
gethostname = { workspace = true }
hashbrown = { workspace = true, features = ["serde"] }
miette = { workspace = true, features = ["fancy"] }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true, features = ["grpc-tonic"] }
opentelemetry-resource-detectors = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
supports-color = { workspace = true }
thiserror = { workspace = true }
tikv-jemallocator = { workspace = true, optional = true }
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "tracing",
    "net",
    "fs",
    "process",
] }
tokio-process-terminate = { workspace = true }
tosub = { workspace = true }
tower-http = { workspace = true, features = ["trace", "cors"] }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
worterbuch-common = { workspace = true }

[lints.rust]
# unsafe_code = "forbid"

[lints.clippy]
all = "deny"
enum_glob_use = "deny"
# pedantic = "deny"
# nursery = "deny"
unwrap_used = "deny"
