[package]
name = "worterbuch-codec"
version = "0.19.0"
edition = "2021"
authors = ["Michael Bachmann <mbachmann@bbmsoft.net>"]
description = "Encode/decode Wörterbuch messages."
repository = "https://github.com/babymotte/worterbuch"
readme = "README.md"
license = "MIT"
keywords = ["message", "broker", "data", "base", "pubsub"]
categories = ["database"]

[dependencies]
log = "0.4.17"
serde = { version = "1.0.140", features = ["derive"] }
tokio = { version = "1.20.1", features = ["io-util"] }
serde_json = "1.0.82"

[dev-dependencies]
tokio-test = "0.4.2"
