[package]
name = "worterbuch-common"
version = "1.4.0-rc.1"
edition = "2024"
authors = ["Michael Bachmann <mbachmann@bbmsoft.net>"]
description = "Client library for Wörterbuch."
repository = "https://github.com/babymotte/worterbuch"
readme = "README.md"
license = "AGPL-3.0-or-later"
keywords = ["message", "broker", "data", "base", "pubsub"]
categories = ["database"]

[features]
default = []
benchmark = ["random_word"]
ws = ["tungstenite"]
wasm = ["tokio-tungstenite-wasm"]
jemalloc = [
    "tikv-jemallocator",
    "jemalloc_pprof",
    "inferno",
    "pprof_util",
    "mappings",
    "regex",
]
axum-errors = ["axum"]

[dependencies]
tokio = { version = "1.46.1", features = ["sync", "io-util", "time"] }
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
tungstenite = { version = "0.28.0", optional = true }
serde_repr = "0.1.16"
random_word = { version = "0.5.0", features = ["en"], optional = true }
sha2 = "0.10.8"
miette = "7.5.0"
tracing = "0.1.41"
uuid = "1.15.1"
tokio-tungstenite-wasm = { version = "0.6.0", optional = true }
thiserror = "2.0.12"
serde_yaml = "0.9.34"
opentelemetry = "0.31.0"
tikv-jemallocator = { version = "0.6.0", optional = true, features = [
    "profiling",
    "unprefixed_malloc_on_supported_platforms",
] }
jemalloc_pprof = { version = "0.8.0", features = [
    "flamegraph",
], optional = true }
inferno = { version = "0.12.2", optional = true }
pprof_util = { version = "0.8.0", features = ["flamegraph"], optional = true }
mappings = { version = "0.7.0", optional = true }
regex = { version = "1.11.1", optional = true }
opentelemetry-otlp = "0.31.0"
http = "1.3.1"
axum = { version = "0.8.4", optional = true }
jsonwebtoken = { version = "10.0.0", features = ["rust_crypto"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
enum_glob_use = "deny"
# pedantic = "deny"
# nursery = "deny"
unwrap_used = "deny"
