[package]
name = "worterbuch-common"
version = "1.6.0-alpha.4"
edition = "2024"
authors = ["Michael Bachmann <mbachmann@bbmsoft.net>"]
description = "Client library for Wörterbuch."
repository = "https://github.com/babymotte/worterbuch"
readme = "README.md"
license = "AGPL-3.0-or-later"
keywords = ["message", "broker", "data", "base", "pubsub"]
categories = ["database"]

[features]
default = []
benchmark = ["random_word"]
ws = ["tungstenite"]
wasm = ["tokio-tungstenite-wasm"]
jemalloc = [
    "tikv-jemallocator",
    "jemalloc_pprof",
    "inferno",
    "pprof_util",
    "mappings",
    "regex",
]
axum-errors = ["axum"]
redb = ["dep:redb"]
telemetry = ["opentelemetry", "opentelemetry-otlp"]

[dependencies]
axum = { workspace = true, optional = true }
hashbrown = { workspace = true }
http = { workspace = true }
inferno = { workspace = true, optional = true }
jemalloc_pprof = { workspace = true, optional = true }
jsonwebtoken = { workspace = true }
mappings = { workspace = true, optional = true }
miette = { workspace = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
pprof_util = { workspace = true, optional = true }
random_word = { workspace = true, optional = true }
redb = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_repr = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tikv-jemallocator = { workspace = true, optional = true }
tokio = { workspace = true, features = ["sync", "io-util", "time", "macros"] }
tokio-tungstenite-wasm = { workspace = true, optional = true }
tracing = { workspace = true }
tungstenite = { workspace = true, optional = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
enum_glob_use = "deny"
# pedantic = "deny"
# nursery = "deny"
unwrap_used = "deny"
