[package]
name = "worterbuch-js"
version = "0.13.0"
edition = "2021"
authors = ["Michael Bachmann <mbachmann@bbmsoft.net>"]
description = "JavaScript client library for Wörterbuch."
repository = "https://github.com/babymotte/worterbuch"
readme = "README.md"
license = "MIT"
keywords = ["message", "broker", "data", "base", "pubsub"]
categories = ["database"]

[lib]
crate-type = ["cdylib"]

[dependencies]
libworterbuch = { version = "0.13.0" }
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }
wee_alloc = "0.4.5"
serde_json = "1.0.82"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
