[package]
name = "worterbuch-speedtest"
version = "1.4.0-rc.5"
edition = "2024"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
dotenvy = "0.15.7"
hostname = "0.4.0"
miette = { version = "7.1.0", features = ["fancy"] }
poem = { version = "3.0.4", features = ["sse", "static-files"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.48.0", features = ["full"] }
tokio-graceful-shutdown = { version = "0.19.0", features = ["tracing"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
worterbuch-client = { version = "1.4.0-rc.5", path = "../worterbuch-client" }
worterbuch-common = { version = "1.4.0-rc.5", path = "../worterbuch-common", features = [
    "benchmark",
] }


[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
enum_glob_use = "deny"
# pedantic = "deny"
# nursery = "deny"
unwrap_used = "deny"
