[package]
name = "worterbuch"
version = "1.3.8"
edition = "2024"
authors = ["Michael Bachmann <mbachmann@bbmsoft.net>"]
description = "A message broker / database hybrid."
repository = "https://github.com/babymotte/worterbuch"
readme = "../README.md"
license = "AGPL-3.0-or-later"
keywords = ["message", "broker", "data", "base", "pubsub"]
categories = ["database-implementations"]
default-run = "worterbuch"

[features]
jemalloc = ["worterbuch-common/jemalloc", "tikv-jemalloc-ctl"]
telemetry = [
    "opentelemetry",
    "opentelemetry-otlp",
    "opentelemetry-resource-detectors",
    "opentelemetry-semantic-conventions",
    "opentelemetry_sdk",
    "tracing-opentelemetry",
]
commercial = []
default = ["jemalloc", "telemetry"]
tikv-jemalloc-ctl = ["dep:tikv-jemalloc-ctl"]

[dependencies]
worterbuch-common = { version = "1.3.8-rc.0", path = "../worterbuch-common", features = [
    "axum-errors",
] }
tokio = { version = "1.44.2", features = ["rt-multi-thread", "fs"] }
tokio-graceful-shutdown = "0.16.0"
dotenvy = "0.15.7"
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
clap = { version = "4.1.11", features = ["derive", "env"] }
sha2 = "0.10.6"
hex = "0.4.3"
futures = { version = "0.3.27" }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
serde_yaml = "0.9.22"
hashlink = "0.10.0"
tokio-stream = "0.1.14"
jsonwebtoken = "9.2.0"
miette = { version = "7.1.0", features = ["fancy"] }
tokio-util = "0.7.13"
tracing = "0.1.41"
flate2 = "1.1.0"
lazy_static = "1.5.0"
supports-color = "3.0.2"
base64 = "0.22.1"
hostname = "0.4.0"
opentelemetry = { version = "0.30.0", optional = true }
opentelemetry-otlp = { version = "0.30.0", features = [
    "grpc-tonic",
], optional = true }
opentelemetry-resource-detectors = { version = "0.9.0", optional = true }
opentelemetry-semantic-conventions = { version = "0.30.0", optional = true }
opentelemetry_sdk = { version = "0.30.0", optional = true }
tracing-opentelemetry = { version = "0.31.0", optional = true }
tower-http = { version = "0.6.2", features = ["cors", "fs", "trace"] }
tokio-metrics = "0.4.0"
chrono = "0.4.41"
socket2 = { version = "0.6.0", features = ["all"] }
axum = { version = "0.8.4", features = ["http2", "ws"] }
axum-server = "0.7.2"
headers = "0.4.1"
axum-extra = { version = "0.10.1", features = ["cookie", "typed-header"] }
http-body-util = "0.1.3"
thiserror = "2.0.16"
tikv-jemalloc-ctl = { version = "0.6.0", optional = true, features = ["stats"] }
libc = "0.2.175"

[lints.rust]
# unsafe_code = "forbid"

[lints.clippy]
all = "deny"
enum_glob_use = "deny"
# pedantic = "deny"
# nursery = "deny"
unwrap_used = "deny"
