[package]
name = "worterbuch"
version = "1.6.0-alpha.4"
edition = "2024"
authors = ["Michael Bachmann <mbachmann@bbmsoft.net>"]
description = "A message broker / database hybrid."
repository = "https://github.com/babymotte/worterbuch"
readme = "../README.md"
license = "AGPL-3.0-or-later"
keywords = ["message", "broker", "data", "base", "pubsub"]
categories = ["database-implementations"]
default-run = "worterbuch"

[features]
jemalloc = ["worterbuch-common/jemalloc", "tikv-jemalloc-ctl"]
telemetry = [
    "opentelemetry",
    "opentelemetry-otlp",
    "opentelemetry-resource-detectors",
    "opentelemetry-semantic-conventions",
    "opentelemetry_sdk",
    "tracing-opentelemetry",
    "opentelemetry-appender-tracing",
    "worterbuch-common/telemetry",
]
commercial = []
redb = ["dep:redb"]
sqlite = ["dep:rusqlite"]
turso = ["dep:turso"]
default = ["jemalloc", "telemetry", "redb", "sqlite"]

[dependencies]
axum = { workspace = true, features = ["http2", "ws"] }
axum-extra = { workspace = true, features = ["cookie", "typed-header"] }
axum-server = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
dotenvy = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
hashbrown = { workspace = true, features = ["serde"] }
hashlink = { workspace = true }
headers = { workspace = true }
hex = { workspace = true }
hostname = { workspace = true }
http-body-util = { workspace = true }
jsonwebtoken = { workspace = true, features = ["rust_crypto"] }
lazy_static = { workspace = true }
libc = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
opentelemetry = { workspace = true, features = ["logs"], optional = true }
opentelemetry_sdk = { workspace = true, features = [
    "rt-tokio",
    "logs",
], optional = true }
opentelemetry-appender-tracing = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, features = [
    "grpc-tonic",
    "logs",
], optional = true }
opentelemetry-resource-detectors = { workspace = true, optional = true }
opentelemetry-semantic-conventions = { workspace = true, optional = true }
redb = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
socket2 = { workspace = true }
strum = { workspace = true }
supports-color = { workspace = true }
thiserror = { workspace = true }
tikv-jemalloc-ctl = { workspace = true, optional = true }
tokio = { workspace = true, features = ["rt-multi-thread", "fs"] }
tokio-metrics = { workspace = true }
tokio-stream = { workspace = true }
tosub = { workspace = true }
tower-http = { workspace = true, features = ["cors", "fs", "trace"] }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
turso = { workspace = true, optional = true }
uuid = { workspace = true, features = ["serde", "v4"] }
worterbuch-common = { workspace = true, features = ["axum-errors", "redb"] }

[lints.rust]
# unsafe_code = "forbid"

[lints.clippy]
all = "deny"
enum_glob_use = "deny"
# pedantic = "deny"
# nursery = "deny"
unwrap_used = "deny"
